# starship-audio

./: .gitignore  README.md  README_AUDIO.md  download_laion_disco.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py
src/starship/: app.py  app_audio.py  utils.py
src/starship/gcp/utils/: compute.py  storage.py
src/starship/servers/: server.py  server.sh
src/starship/status/: status_checker.py
src/starship/workers/: worker.py  worker.sh  worker_audio_only.py  worker_audio_only.sh
starship/: __init__.py  app.py  utils.py
starship-test/: test_videos.json
starship/gcp/utils/: compute.py  storage.py
starship/servers/: server.py  server.sh
starship/status/: status_checker.py
starship/workers/: worker.py  worker.sh
