[metadata]
name = starship
version = attr: starship.__version__
description = Distributed Video Downloader
long_description = file: README.md, CHANGELOG.md, LICENSE.md
license = MIT

[options]
include_package_data = True
packages = find:
install_requires =
    absl-py >= 1.0.0
    google-cloud-storage >= 2.3.0
    google-api-python-client >= 2.47.0


[options.entry_points]
console_scripts =
    starship = starship.cli:main

[options.packages.find]
exclude =
    test

[options.package_data]
* = *.txt, *.rst, *.md, *.yaml, *.yml, *.json, *.html, *.css, *.js, *.png, *.jpg, *.jpeg, *.gif, *.ico, *.eot, *.woff, *.woff2, *.ttf, *.svg, *.otf
